<resources>
    <!-- fingerprint -->
    <string name="auth_title"> Authenticate </string>
    <string name="auth_success">Congratulation ! You have Successfully Authorization</string>
    <string name="aut_fail">Authorization is not Success</string>
    <string name="msg"> Sweep on your Fingerprint to Authorize</string>
    <string name="btn_auth">Sweep</string>
    <string name="fingerprint_not_supported">fingerprint not supported</string>
    <string name="no_fingerprint_configured">no fingerprint configured</string>
    <string name="secure_lock_not_enabled">secure lock not enabled</string>

    <string name="app_name">OD</string>
    <string name="main">Home</string>
    <string name="ingredients">Szukaj wg składników</string>
    <string name="full_list">Lista przepisów</string>
    <string name="suggested">Sugerowane przepisy</string>
    <string name="favourites">Ulubione</string>
    <string name="add_new">Tworzenie przepisu</string>
    <string name="account">Konto</string>
    <string name="change_password">Zmiana hasła</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AlcoBook</string>
    <string name="nav_header_subtitle">Kontakt: alcobook.team@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_activity_home">Home</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_old_password">Aktualne hasło</string>
    <string name="prompt_new_password">Nowe hasło</string>
    <string name="prompt_password2">Powtórz hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="go_to_register">Rejestracja</string>
    <string name="action_create_account">Zarejestruj się</string>
    <string name="action_change_password">Zmień hasło</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Login nieprawidłowy</string>
    <string name="error_invalid_password">Hasło zbyt krótkie</string>
    <string name="error_invalid_password2">Wprowadzone hasła różnią się</string>
    <string name="error_incorrect_password">Hasło nieprawidłowe</string>
    <string name="login_in_use">Login zajęty</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
